<resources>
    <string name="app_name">LifeShare</string>
    <string name="login">Login</string>
    <string name="signup">SIGNUP</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="birthday">Birthday</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="blood_group">Blood Group</string>
    <string name="signup_button">SignUp</string>
    <string name="Veryfy_Code">Verify Code</string>
    <string name="nav_donors">Donors</string>
    <string name="nav_notification">Notifications</string>
    <string name="nav_profile">Profile</string>

    <string-array name="Blood_group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="distance">Distance:</string>
    <string name="a_pos">A+</string>
    <string name="a_neg">A-</string>
    <string name="b_pos">B+</string>
    <string name="b_neg">B-</string>
    <string name="ab_pos">AB+</string>
    <string name="ab_neg">AB-</string>
    <string name="o_pos">O+</string>
    <string name="o_neg">O-</string>
    <string name="list_all">All</string>
    <string name="logout">Logout</string>
    <string name="request_type">Request Type</string>
    <string name="_2_if_you_want_to_receive_blood">2. If You Want To Receive Blood</string>
    <string name="_1_if_you_want_to_donate">1. If You Want To Donate</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="post_for_blood">Post For Blood</string>
</resources>
