<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/req_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/courgette_regular"
        android:text="@string/_1_if_you_want_to_donate"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/req_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/req_text1"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/courgette_regular"
        android:text="@string/_2_if_you_want_to_receive_blood"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_req"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/request_type"
        android:layout_below="@+id/req_text2"
        android:layout_marginTop="6dp"/>

</RelativeLayout>